--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <p>很高兴你来到这里, 你可以在以下的网站找到我</p>
 
 <ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
+  <li> <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/d700842a-52f5-44c2-9ad5-25a699443cbf.mp4">第一幕</a> </li>
   <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
 </ul>
