--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/png" href="./assets/img/favicon.png">
     <title>
-        ZDX LOVES DJX
+        LCH LOVES YXY
     </title>
 
     <meta name="keywords" content="LCH, YXY">
