--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="utf-8">
@@ -61,6 +62,119 @@
         </div>
     </div>
 </section>
+<section class="my-5 py-5" id="calendar_photos">
+    <div class="container">
+        <div class="row">
+            <div class="row justify-content-center text-center my-n1">
+                <div class="col-lg-6">
+                    <h2 class="text-primary text-gradient" style="font-size: 3.5rem;">Events Calendar</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-sm-5 mt-3" id="calendar">
+        </div>
+    </div>
+
+    <div class="container mt-sm-5 mt-3" style="padding-top: 1.3rem;">
+        <div class="bg-gradient-primary position-relative m-3 border-radius-xl shadow-lg">
+            <div class="container pb-lg-8 pb-5 pt-5 postion-relative z-index-2 position-relative">
+                <div class="row">
+                    <div class="col-md-7 mx-auto">
+                        <h3 class="text-white" style="margin-bottom: 2rem;">Dear ZDX,</h3>
+                        <p class="text-white" style="font-weight: bold;">因为你，我爱上了诗意的生活和未知的快乐。</p>
+                        <p class="text-white" style="font-weight: bold;">盛夏的每个夜晚，星空总能勾勒出你的微笑。</p>
+                        <p class="text-white" style="font-weight: bold;">我知道，有位孤独的少女，沐浴着瀚海星辰，在未来等我。</p>
+                        <p class="text-white" style="font-weight: bold;">她的诗只写了一半，另一半，我们一起写完！</p>
+                        <h3 class="text-white" style="text-align: right;">Sincerely,</br>DJX</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mt-sm-5 mt-3" style="padding-top: 2rem;">
+        <div class="col" style="border-radius: 10rem">
+            <div class="card shadow-lg mb-5">
+                <div class="card-header bg-gradient-primary p-5 position-relative">
+                    <h3 class="text-white mb-0">Truth</h3>
+                    <p class="text-white opacity-8 mb-4">Last modified: January 01 2019</p>
+                    <div class="position-absolute w-100 z-index-1 bottom-0 ms-n5">
+                        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                             viewBox="0 24 150 40" preserveAspectRatio="none" shape-rendering="auto"
+                             style="height:7vh;min-height:50px;">
+                            <defs>
+                                <path id="gentle-wave"
+                                      d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
+                            </defs>
+                            <g class="moving-waves">
+                                <use xlink:href="#gentle-wave" x="48" y="-1" fill="rgba(255,255,255,0.40"></use>
+                                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.35)"></use>
+                                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.25)"></use>
+                                <use xlink:href="#gentle-wave" x="48" y="8" fill="rgba(255,255,255,0.20)"></use>
+                                <use xlink:href="#gentle-wave" x="48" y="13" fill="rgba(255,255,255,0.15)"></use>
+                                <use xlink:href="#gentle-wave" x="48" y="16" fill="rgba(255,255,255,0.95"></use>
+                            </g>
+                        </svg>
+                    </div>
+                </div>
+                <div class="card-body p-5" id="truth_words">
+                    <h3 class="mt-5 mb-3">TO DJX: </h3>
+                    <p>你之前问我你什么地方最吸引我，我觉得我最喜欢你稳重，靠谱（？真的吗）有责任心，有担当。 </p>
+                    <p>喜欢你勇于挑战，敢于尝试，乐于钻研。</p>
+                    <p>喜欢你有恒心有毅力去做一件事。</p>
+                    <p>喜欢你的自信，面对自己擅长的东西信手拈来、享受其中的样子。</p>
+                    <p>我觉得你真的对我很好，我真的很开心很感动❤️</p>
+                    <p>但是我觉得我哥说的很对，在爱情里面彼此的特质的吸引应该是最长久的，而且好的爱情，也应该是我们让彼此变得更好。</p>
+                    <p>“因为你我想变得更好”。努力学习，提升完善自己，在性格上、专业上、为人处世上、外形上、眼界上，每一部分都是。</p>
+                    <h3 class="mt-5 mb-3">TO ZDX: </h3>
+                    <p>我准备正式好好和你相处的时候，我被你那爽朗乐观的笑容打动了！</p>
+                    <p>感觉你特别开朗，又很爱聊天说话。和你相处久了之后，发现你对我很好，对待一段感情也很细心、认真。</p>
+                    <p>面对事情虽然会紧张焦虑，但在思考以后都能完美化解！</p>
+                    <p>而且我女朋友很善良，喜欢小动物，仿佛能跟他们沟通一样（我也喜欢）</p>
+                    <p>而且！你还会游泳、跳舞、书法，这些本领我都不会，感觉你很厉害，这些我都喜欢！</p>
+                    <p>你能成为我的女朋友，还这么相信我，我觉得我很幸运。其实我觉得吧，发自内心喜欢一个人，不需要太多理由，爱就完了，你是我最特别的宝！</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mt-sm-5 mt-3">
+        <div class="row pt-lg-6">
+            <div class="col-lg-3">
+                <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
+                    <h3>Records</h3>
+                    <h6 class="text-secondary font-weight-normal pe-3">Some photos can be seen here!</h6>
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div class="row mt-3">
+                    <div class="col-md-4">
+                        <a href="">
+                            <div class="card shadow-lg move-on-hover max-height-160">
+                                <img class="w-100 m-auto" src="./assets/img/qianshou1.jpg" alt="">
+                            </div>
+                            <div class="mt-2 ms-2">
+                                <h6 class="mb-0">01.22.2019</h6>
+                                <p class="text-secondary text-sm">IN KFC</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="">
+                            <div class="card shadow-lg move-on-hover max-height-160">
+                                <img class="w-100 m-auto" src="./assets/img/qianshou2.jpg" alt="">
+                            </div>
+                            <div class="mt-2 ms-2">
+                                <h6 class="mb-0">01.22.2019</h6>
+                                <p class="text-secondary text-sm">IN XI JIE</p>
+                            </div>
+                        </a>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
 
 <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
 
@@ -111,7 +225,7 @@
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
             plugins: ['interaction', 'dayGrid'],
-            defaultDate: '2019-01',
+            defaultDate: '2022-06',
             events: [
                 {
                     title: '第1次表白👩‍❤️‍👨',
