--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
                 </div>
             </div>
         </div>
+        <div class="row mt-sm-5 mt-3" id="calendar">
+        </div>
     </div>
+
 
 </section>
 
@@ -124,7 +127,7 @@
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
             plugins: ['interaction', 'dayGrid'],
-            defaultDate: '2022-06',
+            defaultDate: '2019-01',
             events: [
                 {
                     title: '第1次表白👩‍❤️‍👨',
