--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="col position-relative">
                         <div class="p-3 text-center">
                             <h1 class="text-gradient text-primary"> <span id="state1"></span> DAYS</h1>
-                            <h5 class="mt-3">How long have we been in relationship?</h5>
+                            <h5 class="mt-3">我们在一起多久了?</h5>
                         </div>
                     </div>
                     </div>
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="row justify-content-center text-center my-n1">
                 <div class="col-lg-6">
-                    <h2 class="text-primary text-gradient" style="font-size: 3.5rem;">Events Calendar</h2>
+                    <h2 class="text-primary text-gradient" style="font-size: 3.5rem;">活动日历</h2>
                 </div>
             </div>
         </div>
