--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 text-center mx-auto">
-                    <h1 class="text-white pt-3 mt-n5">🌕 柳呈辉 ❤️ 游欣怡 🌟</h1>
+                    <h1 class="text-white pt-3 mt-n5">❄️ 柳呈辉 ❤️ 游欣怡 🌟</h1>
                     <p class="lead text-white mt-3">Started from January 22, 2019.</p>
                 </div>
             </div>
