--- a/index.html
+++ b/index.html
@@ -150,7 +150,19 @@
                 {
                     title: '第1次牵手🤝',
                     start: '2019-03-15'
-                }
+                },
+                {
+                    title: '第1次亲吻😗',
+                    start: '2019-04-23'
+                },
+                {
+                    title: '第1次约会👩‍❤️‍👨',
+                    start: '2021-05-01'
+                },
+                {
+                    title: '第1次住一起🏠',
+                    start: '2023-04-29'
+                },
             ]
         });
         calendar.render();
