--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
     <title>
         LCH LOVES YXY
     </title>
+    <head>
+        <style>
+        .button {
+          position: fixed;
+          bottom: 20px;
+          right: 20px;
+          padding: 10px 20px;
+          background-color: #4CAF50;
+          color: white;
+          border: none;
+          cursor: pointer;
+          border-radius: 4px;
+        }
+        
+        .button:hover {
+          background-color: #45a049;
+        }
+        </head>
+        <body>
 
+        <a href="#top" class="button">返回顶部</a>
+
+        <!-- 假设页面有很长的内容 -->
+        <div style="height: 2000px;"></div>
+
+        </body>
+        </style>
+    </head>
     <meta name="keywords" content="LCH, YXY">
     <meta name="description" content="LCH LOVES YXY!">
 
