--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
 
-<a href="#top" class="github-button">返回顶部</a>
+<a href="./chat-want-to-say/index.html" class="github-button">生日快乐</a>
 
 <!-- 假设页面有很长的内容 -->
 <div style="height: 2000px;"></div>
