--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
 
-<a href="chat-want-to-say/birthday.html" class="github-button">生日快乐呀</a>
+<a href="chat-want-to-say" class="github-button">生日快乐呀</a>
 
 <!-- 假设页面有很长的内容 -->
 <div style="height: 2000px;"></div>
