--- a/chat-want-to-say/index.html
+++ b/chat-want-to-say/index.html
@@ -1,14 +1,19 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/timeforever/chat-want-to-say/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+    <script type="module" crossorigin src="/timeforever/chat-want-to-say/assets/index.5b94ef54.js"></script>
+    <link rel="modulepreload" href="/timeforever/chat-want-to-say/assets/vendor.e2e054c7.js">
+    <link rel="stylesheet" href="/timeforever/chat-want-to-say/assets/vendor.330f0230.css">
+    <link rel="stylesheet" hreftimeforever/chat-want-to-say/assets/index.f79f164c.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    
     <script src="js/zepto.min.js"></script>
   </body>
 </html>
