--- a/index.html
+++ b/index.html
@@ -112,10 +112,7 @@
 </head>
 <body>
 
-<a href="chat-want-to-say" class="github-button">生日快乐</a>
-
-<!-- 假设页面有很长的内容 -->
-<div style="height: 2000px;"></div>
+<a href="chat-want-to-say" class="github-button">生日快乐a</a>
 
 </body>
 <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
