--- a/chat-want-to-say/index.html
+++ b/chat-want-to-say/index.html
@@ -9,7 +9,7 @@
     <script type="module" crossorigin src="/timeforever/chat-want-to-say/assets/index.5b94ef54.js"></script>
     <link rel="modulepreload" href="/timeforever/chat-want-to-say/assets/vendor.e2e054c7.js">
     <link rel="stylesheet" href="/timeforever/chat-want-to-say/assets/vendor.330f0230.css">
-    <link rel="stylesheet" hreftimeforever/chat-want-to-say/assets/index.f79f164c.css">
+    <link rel="stylesheet" href="timeforever/chat-want-to-say/assets/index.f79f164c.css">
   </head>
   <body>
     <div id="app"></div>
