--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
 
-<a href="chat-want-to-say" class="github-button">生日快乐a</a>
+<a href="chat-want-to-say" class="github-button">生日快乐</a>
 
 </body>
 <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
