--- a/index.html
+++ b/index.html
@@ -1,195 +1,109 @@
-
-<!DOCTYPE html>
-<html lang="en"><head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="./assets/img/favicon.png">
-    <title>
-        LCH LOVES YXY
-    </title>
-
-    <meta name="keywords" content="LCH, YXY">
-    <meta name="description" content="LCH LOVES YXY!">
-
-    <link id="pagestyle" href="./assets/css/soft-design-system-pro.min.css?v=1.0.9" rel="stylesheet">
-    <link href="./assets/css/calendar.css" rel="stylesheet">
-    <link href="./assets/css/modification.css" rel="stylesheet">
-</head>
-<body class="presentation-page">
-
-<header class="header-2">
-    <div class="page-header min-vh-75 relative">
-        <span class="mask bg-gradient-primary"></span>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 text-center mx-auto">
-                    <h1 class="text-white pt-3 mt-n5">🌕 柳呈辉 ❤️ 游欣怡 🌟</h1>
-                    <p class="lead text-white mt-3">Started from January 22, 2019.</p>
-                </div>
-            </div>
-        </div>
-        <div class="position-absolute w-100 z-index-1 bottom-0">
-            <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 40" preserveAspectRatio="none" shape-rendering="auto">
-                <defs>
-                    <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
-                </defs>
-                <g class="moving-waves">
-                    <use xlink:href="#gentle-wave" x="48" y="-1" fill="rgba(255,255,255,0.40"></use>
-                    <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.35)"></use>
-                    <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.25)"></use>
-                    <use xlink:href="#gentle-wave" x="48" y="8" fill="rgba(255,255,255,0.20)"></use>
-                    <use xlink:href="#gentle-wave" x="48" y="13" fill="rgba(255,255,255,0.15)"></use>
-                    <use xlink:href="#gentle-wave" x="48" y="16" fill="rgba(255,255,255,0.95"></use>
-                </g>
-            </svg>
-        </div>
-    </div>
-</header>
-<section class="pt-3 pb-4" id="count-stats">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-9 z-index-2 border-radius-xl mt-n10 mx-auto py-3 blur shadow-blur">
-                <div class="row">
-                    <div class="col position-relative">
-                        <div class="p-3 text-center">
-                            <h1 class="text-gradient text-primary"> <span id="state1"></span> DAYS</h1>
-                            <h5 class="mt-3">我们在一起多久了?</h5>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="my-5 py-5" id="calendar_photos">
-    <div class="container">
-        <div class="row">
-            <div class="row justify-content-center text-center my-n1">
-                <div class="col-lg-6">
-                    <h2 class="text-primary text-gradient" style="font-size: 3.5rem;">活动日历</h2>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-sm-5 mt-3" id="calendar">
-        </div>
-    </div>
-    <div class="container mt-sm-5 mt-3" style="padding-top: 1.3rem;">
-        <div class="bg-gradient-primary position-relative m-3 border-radius-xl shadow-lg">
-            <div class="container pb-lg-8 pb-5 pt-5 postion-relative z-index-2 position-relative">
-                <div class="row">
-                    <div class="col-md-7 mx-auto">
-                        <li> <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/d700842a-52f5-44c2-9ad5-25a699443cbf.mp4">第一幕</a> </li>
-                        <li> <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/accc5d51-f349-44ee-be88-7b45464e5d44.mp4">第二幕</a> </li>
-                        <li> <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/6d9ad0c9-1eb6-44c1-b90e-8259240185ba.mp4">第三幕</a> </li>
-                        <li> <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/76490e19-884b-4097-a312-7a98e090c901.mp4">第四幕</a> </li>
-                        <li> <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/e35103b3-9f9a-4220-a55d-25951113ef09.mp4">第五幕</a> </li>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</section>
+<html>
 <head>
-<style>
-.github-button {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  padding: 10px 20px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
-}
-
-.github-button:hover {
-  background-color: #45a049;
-}
-</style>
+    <meta charset="UTF-8">
+    <title>js拼团日期倒计时</title>
+    <style>
+        .mytime{ line-height: 40px; width: 300px; margin: 0 auto;}
+    </style>
 </head>
 <body>
 
-<a href="chat-want-to-say" class="github-button">生日快乐</a>
+<div class="mytime jsTime" data-time="2019-04-01 16:58:00">时间1</div>
+<div class="mytime jsTime" data-time="2019-04-04 18:00:02">时间2</div>
+<div class="mytime jsTime" data-time="2019-04-05 19:01:31">时间3</div>
+<div class="mytime jsTime" data-time="2019-04-06 05:05:15">时间4</div>
+<div class="mytime jsTime" data-time="2019-04-07 09:01:43">时间5</div>
+<hr>
+<div class="mytime jsTime2" data-time="2019-04-08 16:30:05">时间1</div>
+<div class="mytime jsTime2" data-time="2019-04-09 14:01:22">时间2</div>
+<div class="mytime jsTime2" data-time="2019-04-10 18:06:25">时间3</div>
+<div class="mytime jsTime2" data-time="2019-04-11 22:07:19">时间4</div>
+<div class="mytime jsTime2" data-time="2019-04-12 23:12:38">时间5</div>
 
 </body>
-<script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
 
-<script src="./assets/js/plugins/countup.min.js"></script>
-
-<script src="./assets/js/plugins/calendar/core.js"></script>
-<script src="./assets/js/plugins/calendar/daygrid.js"></script>
-<script src="./assets/js/plugins/calendar/interaction.js"></script>
-
-<script src="./assets/js/soft-design-system-pro.min.js?v=1.0.9" type="text/javascript"></script>
-
-<script src="./assets/js/sakura.js" type="text/javascript"></script>
-
+<!-- 方法1 -->
 <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-        dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-46172202-12');
+    const countdown = {
+        domList : document.querySelectorAll('.jsTime'),
+        formatNumber(n){
+            // return n.toString().padStart(2, '0');  // 用padStart方法要注意兼容问题
+            n = n.toString();
+            return n[1] ? n : '0' + n;
+        },
+        setTime(dom){
+            //获取设置的时间 如：2019-3-28 14:00:00  ios系统得加正则.replace(/\-/g, '/');
+            const leftTime = new Date(dom.getAttribute('data-time').replace(/\-/g, '/')) - new Date();
+            if (leftTime >= 0) {
+                const d = Math.floor(leftTime / 1000 / 60 / 60 / 24);
+                const h = Math.floor(leftTime / 1000 / 60 / 60 % 24);
+                const m = Math.floor(leftTime / 1000 / 60 % 60);
+                const s = Math.floor(leftTime / 1000 % 60);
+                dom.innerHTML = `剩余${ d > 0 ? d + '天' : '' }${ [h, m, s].map(this.formatNumber).join(':') }`;
+            } else {
+                clearInterval(dom.$timer);
+                dom.innerHTML = '拼团已结束';
+            }
+        },
+        start(){
+            this.domList.forEach((dom) => {
+                this.setTime(dom);
+                dom.$timer = setInterval(() => {
+                    this.setTime(dom);
+                }, 1e3);
+            });
+        },
+    };
+    countdown.start();
 </script>
+
+<!-- 方法2 -->
 <script>
-</script>
-<script type="text/javascript">
-    // countto
-    const date1 = new Date("01/22/2019");
-    const date2 = new Date();
-    const Difference_In_Time = date2.getTime()-date1.getTime();
-    let Difference_In_Days = 0;
-    if (Difference_In_Time>0)
-        Difference_In_Days=Math.ceil(Difference_In_Time / (1000 * 3600 * 24));
-
-    if (document.getElementById('state1')) {
-        document.getElementById("state1").setAttribute("countTo",Difference_In_Days.toString());
-        document.getElementById("state1").innerHTML=Difference_In_Days.toString();
-        const countUp = new CountUp('state1', document.getElementById("state1").getAttribute("countTo"));
-        if (!countUp.error) {
-            countUp.start();
-        } else {
-            console.error(countUp.error);
+    //时间格式处理
+    const formatNumber = n => {
+        n = n.toString();
+        return n[1] ? n : '0' + n;
+    };
+    //团购倒计时
+    const teamCountTime = (obj) => {
+        var timer = null;
+        function fn(){
+            //获取设置的时间 如：2019-3-28 14:00:00  ios系统得加正则.replace(/\-/g, '/');
+            var setTime = obj.getAttribute('data-time').replace(/\-/g, '/');
+            //获取当前时间
+            var date    = new Date(),
+                now     = date.getTime(),
+                endDate = new Date(setTime),
+                end     = endDate.getTime();
+            //时间差
+            var leftTime = end - now;
+            //d,h,m,s 天时分秒
+            var d, h,m,s;
+            var otime = '';
+            if (leftTime >= 0) {
+                d = Math.floor(leftTime / 1000 / 60 / 60 / 24);
+                h = Math.floor(leftTime / 1000 / 60 / 60 % 24);
+                m = Math.floor(leftTime / 1000 / 60 % 60);
+                s = Math.floor(leftTime / 1000 % 60);
+                if (d <= 0) {
+                    otime = [h, m, s].map(formatNumber).join(':');
+                } else {
+                    otime = d + '天' + [h, m, s].map(formatNumber).join(':');
+                }
+                obj.innerHTML = '剩余' + otime;
+                //
+                timer = setTimeout(fn, 1e3);
+            } else {
+                clearTimeout(timer);
+                obj.innerHTML = '拼团已结束';
+            }
         }
-    }
-
-    // calendar
-    document.addEventListener('DOMContentLoaded', function () {
-        var calendarEl = document.getElementById('calendar');
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-            plugins: ['interaction', 'dayGrid'],
-            defaultDate: '2019-01',
-            events: [
-                {
-                    title: '第1次表白👩‍❤️‍👨',
-                    start: '2019-01-22'
-                },
-                {
-                    title: '第1次牵手🤝',
-                    start: '2019-03-15'
-                },
-                {
-                    title: '第1次亲吻😗',
-                    start: '2019-04-23'
-                },
-                {
-                    title: '第1次约会👩‍❤️‍👨',
-                    start: '2021-05-01'
-                },
-                {
-                    title: '第1次住一起🏠',
-                    start: '2023-04-29'
-                },
-            ]
-        });
-        calendar.render();
+        fn();
+    };
+    let jsTimes = document.querySelectorAll('.jsTime2');
+    jsTimes.forEach((obj) => {
+        teamCountTime(obj);
     });
 </script>
 
-</body></html>
+</html>
