--- a/index.html
+++ b/index.html
@@ -236,15 +236,15 @@
 
     <div class="countdown-container">
         <div class="countdown-item">
-            <h2>纪念日1</h2>
+            <h2>五周年纪念日</h2>
             <div id="countdown1"></div>
         </div>
         <div class="countdown-item">
-            <h2>纪念日2</h2>
+            <h2>他的19岁生日</h2>
             <div id="countdown2"></div>
         </div>
         <div class="countdown-item">
-            <h2>纪念日3</h2>
+            <h2>她的19岁生日</h2>
             <div id="countdown3"></div>
         </div>
     </div>
@@ -252,9 +252,9 @@
     <script>
         // 纪念日的日期
         var anniversaryDates = [
-            new Date("2023-07-01"),
-            new Date("2023-08-15"),
-            new Date("2023-12-25")
+            new Date("2024-01-22"),
+            new Date("2023-07-09"),
+            new Date("2023-10-01")
         ];
 
         // 更新倒计时
