--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
             border: 2px solid White;
             padding: 10px;
             
-            background-color: White;
-            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            background-color:rgba(247,246,246,0.3);
+            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
         }
 
         /* 响应式字体和div尺寸 */
