--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
             text-align: center;
             border: 2px solid White;
             padding: 10px;
-            
-            background-color:rgba(247,246,246,0.3);
+            filter:blur(5px);
+            background-color:rgba(247,246,246,0.6);
             box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
         }
 
