--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
             position: fixed;
             top: 15px;
             right: 15px;
-           
+            position:absolute;
+            z-index:9999;
             justify-content: space-around;
             align-items: center;
         }
