--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <header class="header-2">
     <div class="page-header min-vh-75 relative">
-        <span class="mask bg-gradient-primary"></span>
+        <span ></span>
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 text-center mx-auto">
