--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <header class="header-2">
     <div class="page-header min-vh-75 relative">
-        <span ></span>
+        <span class="mask bg-gradient-primary"></span>
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 text-center mx-auto">
@@ -210,7 +210,6 @@
     </style>
 </head>
 <body>
-    <h1>纪念日倒计时</h1>
 
     <div class="countdown-container">
         <div class="countdown-item">
