--- a/index.html
+++ b/index.html
@@ -258,4 +258,51 @@
         setInterval(updateCountdown, 1000);
     </script>
 </body>
+    <head>
+<style>
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+</style>
+</head>
+<body>
+
+<div class="dropdown">
+  <span>菜单</span>
+  <div class="dropdown-content">
+    <a href="page1.html">选项1</a>
+    <a href="page2.html">选项2</a>
+    <a href="page3.html">选项3</a>
+    <a href="page4.html">选项4</a>
+    <a href="page5.html">选项5</a>
+  </div>
+</div>
+
+</body>
 </html>
