--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
 .dropdown {
   position: relative;
   display: inline-block;
+  margin-top: 10px;
 }
 
 .dropdown-content {
@@ -272,10 +273,25 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  top: 0;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.dropdown::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+  border: 6px solid transparent;
+  border-left-color: #333;
+}
+
+.dropdown:hover::before {
+  border-left-color: #f1f1f1;
 }
 
 .dropdown-content a {
