--- a/index.html
+++ b/index.html
@@ -258,18 +258,22 @@
         setInterval(updateCountdown, 1000);
     </script>
 </body>
+<!DOCTYPE html>
+<html>
 <head>
 <style>
 .dropdown {
   position: fixed;
-  top: 0;
+  top: 10px;
+  left: 10px;
   display: inline-block;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 5px;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -307,4 +311,6 @@
 </div>
 
 </body>
+</html>
+
 </html>
