--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
 <head>
 <style>
 .dropdown {
+  background-color: rgba(255, 255, 255, 0.8);
   position: fixed;
   top: 10px;
   left: 10px;
@@ -300,13 +301,13 @@
 <body>
 
 <div class="dropdown">
-  <span>菜单</span>
+  <span>视频</span>
   <div class="dropdown-content">
-    <a href="page1.html">选项1</a>
-    <a href="page2.html">选项2</a>
-    <a href="page3.html">选项3</a>
-    <a href="page4.html">选项4</a>
-    <a href="page5.html">选项5</a>
+    <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/d700842a-52f5-44c2-9ad5-25a699443cbf.mp4">第一幕</a>
+    <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/accc5d51-f349-44ee-be88-7b45464e5d44.mp4">第二幕</a>
+    <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/6d9ad0c9-1eb6-44c1-b90e-8259240185ba.mp4">第三幕</a>
+    <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/76490e19-884b-4097-a312-7a98e090c901.mp4">第四幕</a>
+    <a href="https://mp-fdcd3838-cb74-408c-bb91-053e8ea79422.cdn.bspapp.com/VKCEYUGU-fdcd3838-cb74-408c-bb91-053e8ea79422/e35103b3-9f9a-4220-a55d-25951113ef09.mp4">第五幕</a>
   </div>
 </div>
 
